--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -29,20 +29,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "859a53d8-f7f7-4181-8b43-0dad5f296b8c",
+   "cell_type": "markdown",
+   "id": "839d8f59-150e-4029-8654-2326bfad0d53",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1695960103.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    Some of the popular languages that Data Scientists use are:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "Some of the popular languages that Data Scientists use are:\n",
     "1. SQL\n",
@@ -52,11 +41,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "701007aa-1db4-4cdf-a311-c4524c0c7d1a",
+   "cell_type": "markdown",
+   "id": "3303be3c-802b-489c-8a6b-b2df9de9c17d",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Some of the commonly used libraries used by Data Scientists include:\n",
     "1. NumPy\n",
@@ -65,11 +52,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "448fdc51-85aa-4810-b9c7-329b78207464",
+   "cell_type": "markdown",
+   "id": "4ce2dd28-9743-41bb-9c6e-a3011692f2bf",
    "metadata": {},
-   "outputs": [],
    "source": [
     "|Data Science Tools|\n",
     "|-------------------|\n",
@@ -80,34 +65,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7936d591-ac75-4964-bcfd-cb59788a9c69",
+   "cell_type": "markdown",
+   "id": "44ae0b76-7977-4285-96c1-96cf2d525194",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "21e79d2b-1053-4aa5-824f-d3651352a6cc",
+   "cell_type": "markdown",
+   "id": "3bf66ebd-2b02-46cf-a5a8-9d0af31cf373",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# This is a simple arithmetic expression to multiply then add integers\n",
+    "This is a simple arithmetic expression to multiply then add integers\n",
     "\n",
     "(3*4)+5"
    ]
